# jersey-number-pipeline

./: MIGRATION_SUMMARY.md  README.md  centroid_reid.py  configuration.py  helpers.py  how_to.md  main.py  parseq_python_311_migration_analysis.md  pyproject.toml  python_311_migration_analysis.md  python_311_migration_strategy.md  sitecustomize.py  vitpose_python_311_migration_analysis.md
str/parseq/: pyproject.toml
