[project]
name = "jersey-number-pipeline"
version = "0.1.0"
description = "Jersey number detection pipeline for sports videos"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gdown>=5.2.1",
    "opencv-python>=4.10.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "tqdm>=4.66",
    "numpy>=1.24",
    "yacs>=0.1.8",
    "pytorch-lightning>=2.0.0",
    "einops>=0.8",
    "torchmetrics>=1.0",
    "setuptools>=70",
    "tensorboard>=2.15",
    "mlflow>=2.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
