[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "strhub"
version = "1.1.0"
description = "Scene Text Recognition Model Hub: A collection of deep learning models for Scene Text Recognition"
authors = [
  {name = "Darwin Bautista", email = "baudm@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["optional-dependencies"]
dependencies = [
    "aiohttp>=3.8",
    "click>=8.0",
    "huggingface-hub>=0.16",
    "nltk>=3.8",
    "numpy>=1.24",
    "pillow>=10.0",
    "pytorch-lightning>=1.9.0",
    "pyyaml>=6.0",
    "regex>=2023",
    "safetensors>=0.3",
    "timm>=0.9",
    "torch>=1.13",
    "torchmetrics>=1.0",
    "torchvision>=0.14",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/baudm/parseq"

[tool.setuptools]
packages = ["strhub"]
license-files = ["NOTICE", "LICENSE", "strhub/models/*/LICENSE"]

[tool.setuptools.dynamic]
optional-dependencies.train = { file = ["requirements/train.txt"] }
optional-dependencies.test = { file = ["requirements/test.txt"] }
optional-dependencies.bench = { file = ["requirements/bench.txt"] }
optional-dependencies.tune = { file = ["requirements/tune.txt"] }

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu116"
explicit = true
